samples/_failures_safe/1761217566_d0ac1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fcedabb.c: In function ‘main’:
./samples/SAFE/__tmp_2fcedabb.c:170:1: error: expected declaration or statement at end of input
  170 | int main(void) {
      | ^~~
